--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -2,11 +2,15 @@ name: "CI: Build, Test, Benchmark"
 on:
   push:
     branches:
-      - "**" # trigger on push for all branches or...
+      - "**" # trigger on push for all branches
 
   pull_request:
     branches:
-      - "**" # ...on PR for all branches.
+      - "**" # trigger on PR for all branches
+
+  pull_request_review:
+    types:
+      - submitted # trigger after code reviews (including Copilot)
 
   workflow_dispatch:
     inputs:
@@ -97,6 +101,9 @@ jobs:
               # E.g. for the input '["ubuntu-latest"]', the UI removes the inner quotes and it becomes the invalid JSON: '[ubuntu-latest]'.
               runners_os=$(echo "${{ inputs.runners-os }}" | jq -Rc 'split(",") | map(select(length > 0) | gsub("^\\s+|\\s+$";""))')
               preprocessor_symbols="${preprocessor_symbols};${{ inputs.preprocessor-symbols }}"
+          elif [ '${{ github.event_name }}' == "pull_request" ] || [ '${{ github.event_name }}' == "pull_request_review" ]; then
+              # For pull requests and reviews, use default values from env (no modifications needed)
+              :
           else
               echo "Unsupported event: ${{ github.event_name }}"
               exit 5
