--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -62,7 +62,9 @@ jobs:
   get-params:
     name: Prepare input from env, vars, secrets, inputs, and defaults
     runs-on: ubuntu-latest # in this workflow the runner doesn't matter - we're just preparing the inputs for the next workload(s).
-    if: ${{ github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') }}
+    if: |
+      ( github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') ) &&
+      ( github.event_name != 'pull_request_review' || github.event.review.state == 'approved' )
     outputs:
       build-projects: ${{ steps.init-params.outputs.build-projects }}
       test-projects: ${{ steps.init-params.outputs.test-projects }}
