Add Codecov and coverage settings configuration files
- Introduced `codecov.yaml` for Codecov configuration, specifying coverage precision, thresholds, and ignored paths.
- Added `coverage.settings.xml` to define module paths, source exclusions, and attributes for code coverage analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,8 @@ _TeamCity*
 coverage*.json
 coverage*.xml
 coverage*.info
+# But keep the settings file, which is not auto-generated and is needed for code coverage to work properly
+!coverage.settings.xml
 
 # Visual Studio code coverage results
 *.coverage
