--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,8 +11,8 @@ on:
 
   pull_request_review:
     types:
-      - submitted # trigger after code reviews (including Copilot)
-
+      - submitted # trigger after any submitted code review (comments, changes requested, approved, including Copilot);
+                  # jobs further restrict to approved reviews via `if: github.event.review.state == 'approved'`.
   workflow_dispatch:
     inputs:
       runners-os:
