--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -45,7 +45,8 @@ jobs:
       ( github.event_name == 'workflow_run' &&
         github.event.workflow_run.conclusion == 'success' &&
         github.event.workflow_run.event == 'push' &&
-        github.event.workflow_run.pull_requests[0] != null )
+        github.event.workflow_run.pull_requests &&
+        github.event.workflow_run.pull_requests[0] )
     outputs:
       dotnet-version: ${{ steps.init-params.outputs.dotnet-version }}
       package-projects: ${{ steps.init-params.outputs.package-projects }}
